Adding configurable hostnames.

--- a/provision/nginx/nginx.conf.j2
+++ b/provision/nginx/nginx.conf.j2
@@ -1,6 +1,6 @@
 server {
 
-    server_name {{domain} www.{{domain};
+    server_name {{domain}} www.{{domain}};
     listen 80 default_server;
     listen [::]:80 default_server;
 
