--- a/provision/nginx/nginx.conf.j2
+++ b/provision/nginx/nginx.conf.j2
@@ -27,8 +27,8 @@ server {
         proxy_send_timeout 90s;
     }
 
-    location /api/accounts {
-        proxy_pass "http://blue.{{domain}}:8090";
+    location /consul/ui {
+        proxy_pass "http://blue.{{domain}}:8500";
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -42,8 +42,8 @@ server {
         proxy_send_timeout 90s;
     }
 
-    location /api/matches {
-        proxy_pass "http://red.{{domain}}:8091";
+    location /v1 {
+        proxy_pass "http://blue.{{domain}}:8500";
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -57,34 +57,64 @@ server {
         proxy_send_timeout 90s;
     }
 
-    location /api/gamestate {
-        proxy_pass "http://yellow.{{domain}}:8092";
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_redirect off;
-        proxy_connect_timeout 90s;
-        proxy_read_timeout 90s;
-        proxy_send_timeout 90s;
-    }
-
-    location /api/player-events {
-        proxy_pass "http://green.{{domain}}:8093";
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_redirect off;
-        proxy_connect_timeout 90s;
-        proxy_read_timeout 90s;
-        proxy_send_timeout 90s;
-    }
+##    location /api/accounts {
+##        proxy_pass "http://blue.{{domain}}:8090";
+##        proxy_http_version 1.1;
+##        proxy_set_header Upgrade $http_upgrade;
+##        proxy_set_header Connection "Upgrade";
+##        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+##        proxy_set_header X-Forwarded-Proto $scheme;
+##        proxy_set_header X-Forwarded-Port $server_port;
+##        proxy_set_header X-Forwarded-Host $host;
+##        proxy_redirect off;
+##        proxy_connect_timeout 90s;
+##        proxy_read_timeout 90s;
+##        proxy_send_timeout 90s;
+##    }
+##
+##    location /api/matches {
+##        proxy_pass "http://red.{{domain}}:8091";
+##        proxy_http_version 1.1;
+##        proxy_set_header Upgrade $http_upgrade;
+##        proxy_set_header Connection "Upgrade";
+##        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+##        proxy_set_header X-Forwarded-Proto $scheme;
+##        proxy_set_header X-Forwarded-Port $server_port;
+##        proxy_set_header X-Forwarded-Host $host;
+##        proxy_redirect off;
+##        proxy_connect_timeout 90s;
+##        proxy_read_timeout 90s;
+##        proxy_send_timeout 90s;
+##    }
+##
+##    location /api/gamestate {
+##        proxy_pass "http://yellow.{{domain}}:8092";
+##        proxy_http_version 1.1;
+##        proxy_set_header Upgrade $http_upgrade;
+##        proxy_set_header Connection "Upgrade";
+##        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+##        proxy_set_header X-Forwarded-Proto $scheme;
+##        proxy_set_header X-Forwarded-Port $server_port;
+##        proxy_set_header X-Forwarded-Host $host;
+##        proxy_redirect off;
+##        proxy_connect_timeout 90s;
+##        proxy_read_timeout 90s;
+##        proxy_send_timeout 90s;
+##    }
+##
+##    location /api/player-events {
+##        proxy_pass "http://green.{{domain}}:8093";
+##        proxy_http_version 1.1;
+##        proxy_set_header Upgrade $http_upgrade;
+##        proxy_set_header Connection "Upgrade";
+##        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+##        proxy_set_header X-Forwarded-Proto $scheme;
+##        proxy_set_header X-Forwarded-Port $server_port;
+##        proxy_set_header X-Forwarded-Host $host;
+##        proxy_redirect off;
+##        proxy_connect_timeout 90s;
+##        proxy_read_timeout 90s;
+##        proxy_send_timeout 90s;
+##    }
 }
 
